# FFmpeg_Demo

./: CMakeLists.txt  README.md
Tutorial/: README.md
Tutorial/SDK_Demo/: CMakeLists.txt
Tutorial/SDK_Demo/AVIOTest/: AVIOTest.cpp  CMakeLists.txt
Tutorial/SDK_Demo/VideoDecoding/: CMakeLists.txt  Decoder.cpp  Decoder.h  InputOutput.cpp  InputOutput.h  VideoDecodingHeader.h  VideoDecodingMain.cpp
Tutorial/SDK_Demo/VideoDemuxing/: AVDecoder.cpp  AVDecoder.h  CMakeLists.txt  DemuxingContext.cpp  DemuxingContext.h  IOFile.h  VideoDemuxingHeader.h  VideoDemuxingMain.cpp
Tutorial/SDK_Demo/VideoEncoding/: CMakeLists.txt  Encoder.cpp  Encoder.h  InputOutput.cpp  InputOutput.h  VideoEncodingMain.cpp
Tutorial/SDK_Demo/VideoEncodingMuxing/: CMakeLists.txt  CoderMuxer.cpp  EncodingMuxingAudio.cpp  EncodingMuxingHeader.h  EncodingMuxingMain.cpp  EncodingMuxingVideo.cpp  Stream.cpp  Stream.h
Tutorial/SDK_Demo/VideoFiltering/: CMakeLists.txt  Filter.cpp  Filter.h  Frame.cpp  Frame.h  IOFiles.cpp  IOFiles.h  VideoFilteringHeader.h  VideoFilteringMain.cpp  common.h
Tutorial/SDK_Demo/VideoRemuxing/: CMakeLists.txt  IOFiles.h  VideoRemuxingHeader.h  VideoRemuxingMain.cpp  common.h
chapter01/: 01-音视频技术概述.md
chapter02/: 02-图像、像素与颜色空间.md
chapter03/: 03-视频压缩编码.md
chapter04/: 04-音频压缩编码.md
chapter05/: 05-音视频文件容器和封装格式.md
chapter06/: 06-音视频流媒体协议.md
chapter07/: 07-FFmpeg的基本操作.md
chapter08/: 08-滤镜图.md
chapter09/: 09-流媒体应用.md
chapter10/: 10-FFmpeg SDK的使用.md  CMakeLists.txt  chapter10.cpp  cmd_dir.cpp
chapter11/: 11-使用FFmpeg SDK进行视频编解码.md  CMakeLists.txt  video_encoder.cpp
chapter12/: 12-使用FFmpeg SDK进行音频编解码.md  CMakeLists.txt  audio_decoder.cpp  audio_encoder.cpp
chapter13/: 13-使用FFmpeg SDK进行音视频文件的解封装与封装.md  CMakeLists.txt  demuxer.cpp  muxer.cpp
chapter14/: 14-使用FFmpeg SDK添加视频滤镜和音频滤镜.md  CMakeLists.txt  audio_filter.cpp  video_filter.cpp
chapter15/: 15-使用FFmpeg SDK进行视频图像转换与音频重采样.md  CMakeLists.txt  audio_resampler.cpp  video_transformer.cpp
inc/: audio_decoder_core.h  audio_encoder_core.h  audio_filter_core.h  audio_resampler_core.h  demuxer_core.h  io_data.h  muxer_core.h  video_decoder_core.h  video_encoder_core.h  video_filter_core.h  video_swscale_core.h
src/: audio_decoder_core.cpp  audio_encoder_core.cpp  audio_filter_core.cpp  audio_resampler_core.cpp  demuxer_core.cpp  io_data.cpp  muxer_core.cpp  video_decoder_core.cpp  video_encoder_core.cpp  video_filter_core.cpp  video_swscale_core.cpp
(+4 files in other folders)
